<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:layout_margin="7dp"
    android:elevation="90dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">
        <TextView
            android:id="@+id/categoryOfSport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameCategory"
            android:textSize="20sp"
            android:textStyle="bold"
            ></TextView>
        <TextView
            android:id="@+id/locationGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locationGame"
            android:textSize="15sp"
            android:padding="5sp"
            ></TextView>
            <TextView
                android:id="@+id/dateGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateGame"
                android:textSize="15sp"
                android:padding="5sp"
                ></TextView>
            <TextView
                android:id="@+id/players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:textSize="15sp"
                android:padding="5sp"
                ></TextView>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>